@@ -166,10 +166,16 @@ argument_list|)
 block|}
 decl_stmt|;
 name|SortedMapWritable
+argument_list|<
+name|Text
+argument_list|>
 name|inMap
 init|=
 operator|new
 name|SortedMapWritable
+argument_list|<
+name|Text
+argument_list|>
 argument_list|()
 decl_stmt|;
 for|for
@@ -242,10 +248,16 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 name|SortedMapWritable
+argument_list|<
+name|Text
+argument_list|>
 name|outMap
 init|=
 operator|new
 name|SortedMapWritable
+argument_list|<
+name|Text
+argument_list|>
 argument_list|(
 name|inMap
 argument_list|)
@@ -269,7 +281,7 @@ name|Map
 operator|.
 name|Entry
 argument_list|<
-name|WritableComparable
+name|Text
 argument_list|,
 name|Writable
 argument_list|>
@@ -294,13 +306,23 @@ argument_list|()
 argument_list|)
 argument_list|)
 expr_stmt|;
-name|assertEquals
-argument_list|(
-literal|0
-argument_list|,
-operator|(
+name|WritableComparable
+argument_list|<
+name|WritableComparable
+argument_list|<
+name|?
+argument_list|>
+argument_list|>
+name|aValue
+init|=
 operator|(
 name|WritableComparable
+argument_list|<
+name|WritableComparable
+argument_list|<
+name|?
+argument_list|>
+argument_list|>
 operator|)
 name|outMap
 operator|.
@@ -311,14 +333,39 @@ operator|.
 name|getKey
 argument_list|()
 argument_list|)
+decl_stmt|;
+name|WritableComparable
+argument_list|<
+name|WritableComparable
+argument_list|<
+name|?
+argument_list|>
+argument_list|>
+name|bValue
+init|=
+operator|(
+name|WritableComparable
+argument_list|<
+name|WritableComparable
+argument_list|<
+name|?
+argument_list|>
+argument_list|>
 operator|)
-operator|.
-name|compareTo
-argument_list|(
 name|e
 operator|.
 name|getValue
 argument_list|()
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|aValue
+operator|.
+name|compareTo
+argument_list|(
+name|bValue
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -343,10 +390,16 @@ argument_list|)
 block|}
 decl_stmt|;
 name|SortedMapWritable
+argument_list|<
+name|Text
+argument_list|>
 name|mapOfMaps
 init|=
 operator|new
 name|SortedMapWritable
+argument_list|<
+name|Text
+argument_list|>
 argument_list|()
 decl_stmt|;
 name|mapOfMaps
@@ -374,10 +427,16 @@ name|outMap
 argument_list|)
 expr_stmt|;
 name|SortedMapWritable
+argument_list|<
+name|Text
+argument_list|>
 name|copyOfMapOfMaps
 init|=
 operator|new
 name|SortedMapWritable
+argument_list|<
+name|Text
+argument_list|>
 argument_list|(
 name|mapOfMaps
 argument_list|)
@@ -413,10 +472,16 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 name|SortedMapWritable
+argument_list|<
+name|Text
+argument_list|>
 name|a
 init|=
 operator|(
 name|SortedMapWritable
+argument_list|<
+name|Text
+argument_list|>
 operator|)
 name|mapOfMaps
 operator|.
@@ -429,10 +494,16 @@ index|]
 argument_list|)
 decl_stmt|;
 name|SortedMapWritable
+argument_list|<
+name|Text
+argument_list|>
 name|b
 init|=
 operator|(
 name|SortedMapWritable
+argument_list|<
+name|Text
+argument_list|>
 operator|)
 name|copyOfMapOfMaps
 operator|.
@@ -480,10 +551,22 @@ argument_list|)
 expr_stmt|;
 comment|// This will work because we know what we put into each set
 name|WritableComparable
+argument_list|<
+name|WritableComparable
+argument_list|<
+name|?
+argument_list|>
+argument_list|>
 name|aValue
 init|=
 operator|(
 name|WritableComparable
+argument_list|<
+name|WritableComparable
+argument_list|<
+name|?
+argument_list|>
+argument_list|>
 operator|)
 name|a
 operator|.
@@ -493,10 +576,22 @@ name|key
 argument_list|)
 decl_stmt|;
 name|WritableComparable
+argument_list|<
+name|WritableComparable
+argument_list|<
+name|?
+argument_list|>
+argument_list|>
 name|bValue
 init|=
 operator|(
 name|WritableComparable
+argument_list|<
+name|WritableComparable
+argument_list|<
+name|?
+argument_list|>
+argument_list|>
 operator|)
 name|b
 operator|.
@@ -535,10 +630,16 @@ name|testForeignClass
 parameter_list|()
 block|{
 name|SortedMapWritable
+argument_list|<
+name|Text
+argument_list|>
 name|inMap
 init|=
 operator|new
 name|SortedMapWritable
+argument_list|<
+name|Text
+argument_list|>
 argument_list|()
 decl_stmt|;
 name|inMap
@@ -576,19 +677,31 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 name|SortedMapWritable
+argument_list|<
+name|Text
+argument_list|>
 name|outMap
 init|=
 operator|new
 name|SortedMapWritable
+argument_list|<
+name|Text
+argument_list|>
 argument_list|(
 name|inMap
 argument_list|)
 decl_stmt|;
 name|SortedMapWritable
+argument_list|<
+name|Text
+argument_list|>
 name|copyOfCopy
 init|=
 operator|new
 name|SortedMapWritable
+argument_list|<
+name|Text
+argument_list|>
 argument_list|(
 name|outMap
 argument_list|)
@@ -617,17 +730,29 @@ name|String
 name|failureReason
 decl_stmt|;
 name|SortedMapWritable
+argument_list|<
+name|Text
+argument_list|>
 name|mapA
 init|=
 operator|new
 name|SortedMapWritable
+argument_list|<
+name|Text
+argument_list|>
 argument_list|()
 decl_stmt|;
 name|SortedMapWritable
+argument_list|<
+name|Text
+argument_list|>
 name|mapB
 init|=
 operator|new
 name|SortedMapWritable
+argument_list|<
+name|Text
+argument_list|>
 argument_list|()
 decl_stmt|;
 comment|// Sanity checks
@@ -959,17 +1084,29 @@ name|testPutAll
 parameter_list|()
 block|{
 name|SortedMapWritable
+argument_list|<
+name|Text
+argument_list|>
 name|map1
 init|=
 operator|new
 name|SortedMapWritable
+argument_list|<
+name|Text
+argument_list|>
 argument_list|()
 decl_stmt|;
 name|SortedMapWritable
+argument_list|<
+name|Text
+argument_list|>
 name|map2
 init|=
 operator|new
 name|SortedMapWritable
+argument_list|<
+name|Text
+argument_list|>
 argument_list|()
 decl_stmt|;
 name|map1
